Fix spacing issue on Firefox
The .reservation-link elements were a bit too high.

Refs #497.

--- a/app/shared/availability-view/availability-view.less
+++ b/app/shared/availability-view/availability-view.less
@@ -137,6 +137,9 @@
   .availability-timeline {
     display: flex;
   }
+  .reservation-link, .reservation-slot {
+    height: @slot-height;
+  }
   .reservation, .reservation-slot {
     display: inline-flex;
     margin: @slot-margin;
@@ -165,7 +168,6 @@
     }
   }
   .reservation-slot {
-    height: @slot-height;
     background-color: @gray-light;
     overflow: hidden;
 
